crates/voom-cli/tests/snapshots/scheduling_policy_envelope__scheduling_policy_envelope__show_unknown_slug_is_not_found.snap
---
source: crates/voom-cli/tests/scheduling_policy_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "scheduling-policy",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "NOT_FOUND",
    "message": "scheduling policy \"missing\" not found"
  }
}
